# IRON_FI

./: .gitignore  README.md  pyproject.toml  requirements-jax.txt
datasets/: __init__.py  mnist.py
docs/: GUIDELINES.md  ironfi_paper.tex  nag_gs_paper.tex
experiments/: __init__.py  logreg_synth_ironfi.py  mnist_softmax_benchmark.py  mnist_softmax_core.py  mnist_softmax_journal.py  nonconvex_iron_fi_jax.py  nonconvex_iron_fi_numpy.py  quad_iron_fi.py
ironfi/: __init__.py  gamma.py  inner_solvers.py  ironfi.py  ironfi_mf.py  noise.py  resolvent.py
ironfi/optimizers/: __init__.py  adamw.py  nag_gs.py
models/: __init__.py  softmax.py
plots/: __init__.py  slices.py  utils.py
utils/: __init__.py  expio.py  plotting.py
