[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ironfi"
version = "0.1.0"
description = "IRON-FI: Implicit Resolvent Optimization under Noise (experiments + minimal implementation)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "matplotlib"]

[tool.setuptools]
packages = ["ironfi", "ironfi.optimizers", "datasets", "models", "utils", "experiments", "plots"]
